--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "sass": "^1.75.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "boostrap": "^2.0.0",
+        "bootstrap": "^5.3.3"
     }
 }
